# pd2-single-player-plus-launcher

./: README.md  index.html  package.json  tailwind.config.js
src/: App.css  App.tsx  Play.tsx  constants.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Settings.tsx  SettingsModal.tsx  Sublink.tsx
src/util/: calculateChecksum.ts  checkIfFileExists.ts  download.ts  downloadAll.ts  fixedResourcePath.ts
